# mcp-claude-memories

./: .coverage  .env.example  .gitignore  CLAUDE.md  README.md  coverage.xml  main.py  pyproject.toml
mcp_claude_memories/: __init__.py  config.py  conversation_parser.py  conversation_watcher.py  hook_handler.py  mcp_server.py  memory_service.py  reflection_agent.py
plans/: 2025-07-02-claude-memories.md
tests/: __init__.py  test_config.py  test_conversation_parser.py  test_conversation_watcher.py  test_hook_handler.py  test_integration.py  test_mcp_server.py  test_memory_service.py  test_reflection_agent.py
